--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Sprint commit 1</h1>
+    <h1>Sprint commit 1 merge conf</h1>
 </body>
 </html>
